--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -1,110 +1,59 @@
-<section>
-  <div class="example-label">Basic</div>
-  <div class="example-button-row">
-    <button mat-button>Basic</button>
-    <button mat-button disabled>Disabled</button>
-    <a mat-button href="https://www.google.com/" target="_blank">Link</a>
+<section class="container-fluid landing-section">
+  <h1>Inspiring Families to Dream Again</h1>
+  <span>
+    Transform your financial future with personalized tools and expert mentorship.
+  </span>
+  <button mat-button>
+    Ve nuestros servicios
+  </button>
+</section>
+
+<section class="container-fluid landing-section">
+  <h6>Our philosophy</h6>
+  <h2>We believe every dream can change the world.</h2>
+
+  <span>
+    At GFC, we don’t just focus on growing your wealth, but on turning it into a force for good. We help you
+    transform your financial success into real impact, supporting you in achieving your most important dreams. Whether
+    you’re advancing a global cause, improving the lives of your family and community, or building a business that can
+    be passed down through generations, we work together to secure and direct your wealth. This way, we ensure you leave
+    a meaningful legacy that truly makes a difference.
+  </span>
+</section>
+
+<section class="container-fluid landing-section">
+  <h6>Our mission, your independence</h6>
+  <h2>Empowering You to Take Control of Your Finances and Live Independently.</h2>
+
+  <span>Discover personalized solutions to build wealth, start a business, or make a meaningful impact through
+    charitable giving.</span>
+
+  <div class="d-flex">
+    @for (item of ServicesItems; track item.title) {
+      <span>{{item.title}}</span>
+    } @empty {
+    <li>There are no items.</li>
+    }
   </div>
 </section>
-<mat-divider></mat-divider>
-<section>
-  <div class="example-label">Raised</div>
-  <div class="example-button-row">
-    <button mat-raised-button>Basic</button>
-    <button mat-raised-button disabled>Disabled</button>
-    <a mat-raised-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
+
+<section class="container-fluid cta-section">
+  <h6>Help millions</h6>
+  <h3>This is the greatest opportunity to help millions protect, build, and secure their wealth.</h3>
 </section>
-<mat-divider></mat-divider>
-<section>
-  <div class="example-label">Stroked</div>
-  <div class="example-button-row">
-    <button mat-stroked-button>Basic</button>
-    <button mat-stroked-button disabled>Disabled</button>
-    <a mat-stroked-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
+
+<section class="container-fluid landing-section">
+  WHYUS
 </section>
-<mat-divider></mat-divider>
-<section>
-  <div class="example-label">Flat</div>
-  <div class="example-button-row">
-    <button mat-flat-button>Basic</button>
-    <button mat-flat-button disabled>Disabled</button>
-    <a mat-flat-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
+
+<section class="container-fluid landing-section">
+  WHYUS2
 </section>
-<mat-divider></mat-divider>
-<section>
-  <div class="example-label">Icon</div>
-  <div class="example-button-row">
-    <div class="example-flex-container">
-      <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-        <mat-icon>more_vert</mat-icon>
-      </button>
-      <button mat-icon-button disabled aria-label="Example icon button with a open in new tab icon">
-        <mat-icon>open_in_new</mat-icon>
-      </button>
-    </div>
-  </div>
+
+<section class="container-fluid landing-section">
+  CTA
 </section>
-<mat-divider></mat-divider>
-<section>
-  <div class="example-label">FAB</div>
-  <div class="example-button-row">
-    <div class="example-flex-container">
-      <div class="example-button-container">
-        <button mat-fab aria-label="Example icon button with a delete icon">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </div>
-      <div class="example-button-container">
-        <button mat-fab disabled aria-label="Example icon button with a heart icon">
-          <mat-icon>favorite</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-</section>
-<mat-divider></mat-divider>
-<section>
-  <div class="example-label">Mini FAB</div>
-  <div class="example-button-row">
-    <div class="example-flex-container">
-      <div class="example-button-container">
-        <button mat-mini-fab aria-label="Example icon button with a menu icon">
-          <mat-icon>menu</mat-icon>
-        </button>
-      </div>
-      <div class="example-button-container">
-        <button mat-mini-fab disabled aria-label="Example icon button with a home icon">
-          <mat-icon>home</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="example-label">Extended Fab</div>
-  <div class="example-button-row">
-    <div class="example-flex-container">
-      <div class="example-button-container">
-        <button mat-fab extended>
-          <mat-icon>favorite</mat-icon>
-          Basic
-        </button>
-      </div>
-      <div class="example-button-container">
-        <button mat-fab extended disabled>
-          <mat-icon>favorite</mat-icon>
-          Disabled
-        </button>
-      </div>
-      <div class="example-button-container">
-        <a mat-fab extended routerLink=".">
-          <mat-icon>favorite</mat-icon>
-          Link
-        </a>
-      </div>
-    </div>
-  </div>
+
+<section class="container-fluid landing-section">
+  CEO MSSGE
 </section>
