--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="landing-section position-relative d-flex align-items-center">
+<!-- <section class="landing-section position-relative d-flex align-items-center">
   <img src="/assets/images/hero.jfif" alt="GFC CATALYST"
     class="img-fluid position-absolute w-100 h-100 object-fit-cover z-n1">
   <div class="text-white ms-md-5 ps-md-5 row">
@@ -16,58 +16,123 @@
       </button>
     </div>
   </div>
-</section>
+</section> -->
 
-<section class="container-fluid landing-section">
+<!-- Our philosophy -->
+<!-- <section class="container-fluid landing-section">
   <h6>Our philosophy</h6>
   <h2>We believe every dream can change the world.</h2>
 
   <span>
-    At GFC, we don’t just focus on growing your wealth, but on turning it into a force for good. We help you
-    transform your financial success into real impact, supporting you in achieving your most important dreams. Whether
-    you’re advancing a global cause, improving the lives of your family and community, or building a business that can
-    be passed down through generations, we work together to secure and direct your wealth. This way, we ensure you leave
-    a meaningful legacy that truly makes a difference.
+    At GFC, <b>we focus on growing your wealth and turning it into a force for good.</b> We support you in achieving
+    your
+    dreams, whether it's advancing global causes, supporting your family and community, or building a lasting business.
+    Our goal is to help you leave a meaningful legacy that makes a real difference.
   </span>
-</section>
+</section> -->
 
+<!-- Start your journey -->
+<!-- <section class="container-fluid landing-section">
+  <div class="d-flex flex-column text-center">
+    <h2>Start your journey</h2>
+    <h6>We empower financial independence with solutions and mentorship.</h6>
+  </div>
+</section> -->
 
+<!-- CTA -->
+<div class="py-5 bg-primary-900">
+  <section class="container align-content-center">
+    <div class="d-flex flex-column text-center align-items-center">
+      <h6 class="text-secondary-600">Help millions</h6>
+      <h2 class="text-white">This is the greatest opportunity to help millions protect, build, and secure their wealth.
+      </h2>
+      <button mat-raised-button type="button" color="accent" class="mt-4">Plan your wealth</button>
+    </div>
+  </section>
+</div>
 
-<section class="container-fluid landing-section">
-  <h6>Our mission, your independence</h6>
-  <h2>Empowering You to Take Control of Your Finances and Live Independently.</h2>
+<!-- Begin your journey -->
+<section class="container align-content-center py-5 my-4">
+  <div class="row">
+    <div class="col-12 col-xl-8">
+      <div class="d-flex flex-column gap-2 mb-4 py-2">
+        <h2>Begin your journey with GFC</h2>
+        <h6>Begin your success with our expert services and guidance.</h6>
+      </div>
 
-  <span>Discover personalized solutions to build wealth, start a business, or make a meaningful impact through
-    charitable giving.</span>
+      <div class="row">
+        <div class="col-12 col-sm-6 my-4">
+          <h4 class="mb-2">Financial Education</h4>
+          <p class="text-body">Access valuable financial education resources to enhance your knowledge and
+            decision-making.</p>
+        </div>
+        <div class="col-12 col-sm-6 my-4">
+          <h4 class="mb-2">Expert Guidance</h4>
+          <p class="text-body">Access valuable financial education resources to enhance your knowledge and
+            decision-making.</p>
+        </div>
+        <div class="col-12 col-sm-6 my-4">
+          <h4 class="mb-2">Diverse Financial Products and Solutions</h4>
+          <p class="text-body">Access valuable financial education resources to enhance your knowledge and
+            decision-making.</p>
+        </div>
+        <div class="col-12 col-sm-6 my-4">
+          <h4 class="mb-2">Customized Strategies</h4>
+          <p class="text-body">Access valuable financial education resources to enhance your knowledge and
+            decision-making.</p>
+        </div>
+      </div>
+    </div>
 
-  <div class="d-flex">
-    @for (item of ServicesItems; track item.title) {
-    <span>{{item.title}}</span>
-    } @empty {
-    <li>There are no items.</li>
-    }
+    <div class="d-none d-xl-block col-xl-4">
+      <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100 h-100 rounded-circle" />
+    </div>
   </div>
 </section>
 
-<section class="container-fluid cta-section">
-  <h6>Help millions</h6>
-  <h3>This is the greatest opportunity to help millions protect, build, and secure their wealth.</h3>
-</section>
+<!-- Your wealth, our mission -->
+<div class="bg-accent-100 py-5">
+  <section class="container align-content-center">
+    <div class="d-flex flex-column text-center gap-2 mb-4 py-2">
+      <h2>Your Wealth, Our Mission</h2>
+      <h6>Driven by numbers, powered by impact. Join thousands who trust us to protect, build, and
+        secure their financial future.</h6>
+    </div>
 
-<section class="container-fluid landing-section">
-  WHYUS
-</section>
+    <div class="row">
+      <div class="d-flex flex-column text-center col-12 col-md-6 col-xl-3 gap-3">
+        <div>
+          <p class="text-highlight">+10</p>
+          <div class="text-secondary-600 fw-bolder">Years of experience</div>
+        </div>
+        <p class="text-body">Helping individuals and families achieve financial independence.</p>
+      </div>
 
-<section class="container-fluid landing-section">
-  WHYUS2
-</section>
+      <div class="d-flex flex-column text-center col-12 col-md-6 col-xl-3 gap-3">
+        <div>
+          <p class="text-highlight">1,000</p>
+          <div class="text-secondary-600 fw-bolder">Success Stories</div>
+        </div>
+        <p class="text-body">Real lives impacted through our proven strategies.</p>
+      </div>
 
-<section class="container-fluid landing-section">
-  CTA
-</section>
+      <div class="d-flex flex-column text-center col-12 col-md-6 col-xl-3 gap-3">
+        <div>
+          <p class="text-highlight">+10M</p>
+          <div class="text-secondary-600 fw-bolder">Wealth Managed</div>
+        </div>
+        <p class="text-body">Securing and growing financial assets worldwide.</p>
+      </div>
 
-<section class="container-fluid landing-section">
-  CEO MSSGE
-</section>
+      <div class="d-flex flex-column text-center col-12 col-md-6 col-xl-3 gap-3">
+        <div>
+          <p class="text-highlight">33+</p>
+          <div class="text-secondary-600 fw-bolder">Countries</div>
+        </div>
+        <p class="text-body">Delivering global financial solutions with a local touch.</p>
+      </div>
+    </div>
+  </section>
+</div>
 
 <app-footer></app-footer>
