--- a/src/app/_shared/styles/custom.css
+++ b/src/app/_shared/styles/custom.css
@@ -10,17 +10,17 @@ h6 {
 }
 
 h6 {
-    font-family: "Montserrat" !important;
-    color: var(--surface-high-emphasis);
-    font-weight: 600;
-    font-size: 1.25rem;
-    line-height: var(--lh-xxlg);
-    letter-spacing: 0.009rem;
+    font-family: Instrument Sans, sans-serif !important;
+    font-weight: 400 !important;
+    font-size: var(--fs-md) !important;
+    line-height: var(--lh-sm) !important;
+    letter-spacing: 0.009rem !important;
+    text-transform: uppercase !important;
 }
 
 h5 {
-    font-family: "Montserrat" !important;
-    color: var(--surface-high-emphasis);
+    font-family: Instrument Sans, sans-serif !important;
+    color: var(--primary-900) !important;
     font-weight: 600 !important;
     font-size: 1.5rem !important;
     line-height: var(--lh-xxlg) !important;
@@ -28,38 +28,39 @@ h5 {
 }
 
 h4 {
-    font-family: "Montserrat" !important;
-    color: var(--surface-high-emphasis);
-    font-weight: 400;
-    font-size: 2.125rem;
-    line-height: 2.25rem;
+    font-family: Instrument Sans, sans-serif !important;
+    color: var(--primary-900) !important;
+    font-weight: 400 !important;
+    font-size: 2.125rem !important;
+    line-height: 2.25rem !important;
 }
 
 h3 {
-    font-family: "Montserrat" !important;
-    color: var(--surface-high-emphasis);
-    font-weight: 400;
-    font-size: 3rem;
-    line-height: 3.5rem;
+    font-family: Playfair Display !important;
+    color: var(--primary-900) !important;
+    font-weight: 400 !important;
+    font-size: 3rem !important;
+    line-height: 3.5rem !important;
 }
 
 h2 {
-    font-family: "Montserrat" !important;
-    color: var(--surface-high-emphasis);
-    font-weight: 400;
-    font-size: 3.75rem;
-    line-height: 4.5rem;
-    letter-spacing: -0.031rem;
+    font-family: Playfair Display Regular !important;
+    color: var(--primary-900) !important;
+    font-weight: 100 !important;
+    font-size: 4rem !important;
+    line-height: 4.5rem !important;
+    letter-spacing: -0.031rem !important;
 }
 
 h1 {
-    font-family: "Montserrat" !important;
-    color: var(--surface-high-emphasis);
+    font-family: Playfair Display !important;
+    color: var(--primary-900);
     font-weight: 400 !important;
     font-size: 6rem !important;
     line-height: 112px !important;
     letter-spacing: -0.094rem !important;
 }
+
 /* #endregion */
 
 /* #region TEXT STYLES */
@@ -73,7 +74,7 @@ h1 {
 }
 
 .text-overline {
-    color: var(--surface-high-emphasis);
+    color: var(--primary-900);
     font-family: "Montserrat";
     font-weight: 600;
     font-size: var(--fs-xxsm);
@@ -83,16 +84,17 @@ h1 {
 }
 
 .text-caption {
-    color: var(--surface-high-emphasis);
-    font-family: "Montserrat";
+    color: var(--primary-500);
+    font-family: Playfair Display !important;
     font-weight: 400;
-    font-size: var(--fs-xsm);
+    font-size: var(--fs-xxl);
     line-height: var(--lh-sm);
     letter-spacing: 0.009rem;
+    text-transform: uppercase;
 }
 
 .text-button {
-    color: var(--surface-high-emphasis);
+    color: var(--primary-900);
     font-family: "Montserrat";
     font-weight: 600;
     font-size: var(--fs-sm);
@@ -101,31 +103,13 @@ h1 {
     text-transform: uppercase;
 }
 
-.text-body-1 {
-    color: var(--surface-high-emphasis) !important;
-    font-family: "Montserrat";
+.text-body {
+    color: var(--primary-900) !important;
+    font-family: Instrument Sans, sans-serif;
     font-weight: 400;
     font-size: var(--fs-md);
     line-height: var(--lh-xxlg);
     letter-spacing: 0.5px;
-}
-
-.text-body-2 {
-    color: var(--surface-high-emphasis);
-    font-family: "Montserrat";
-    font-weight: 400;
-    font-size: var(--fs-sm);
-    line-height: var(--lh-lg);
-    letter-spacing: 0.016rem;
-}
-
-.text-body-2.disabled {
-    color: var(--surface-disabled);
-    font-family: "Montserrat";
-    font-weight: 400;
-    font-size: var(--fs-sm);
-    line-height: var(--lh-lg);
-    letter-spacing: 0.016rem;
 }
 
 .text-link {
@@ -151,6 +135,13 @@ h1 {
     font-size: var(--fs-sm);
     line-height: var(--lh-lg);
     letter-spacing: 0.016rem;
+}
+
+.text-highlight {
+    color: var(--secondary-600);
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 1;
 }
 
 .of-ellipsis {
