--- a/src/app/_shared/styles/material-override/mat-button.css
+++ b/src/app/_shared/styles/material-override/mat-button.css
@@ -6,8 +6,8 @@
 }
 
 .mat-mdc-button.mat-accent {
-    --mdc-text-button-label-text-color: var(--warning-500);
-    --mat-text-button-state-layer-color: var(--warning-500);
+    --mdc-text-button-label-text-color: var(--secondary-500);
+    --mat-text-button-state-layer-color: var(--secondary-500);
     --mat-text-button-ripple-color: rgba(255, 215, 64, 0.1)
 }
 
@@ -25,7 +25,7 @@
 }
 
 .mat-mdc-unelevated-button.mat-accent {
-    --mdc-filled-button-container-color: var(--warning-500);
+    --mdc-filled-button-container-color: var(--secondary-500);
     --mdc-filled-button-label-text-color: black;
     --mat-filled-button-state-layer-color: black;
     --mat-filled-button-ripple-color: rgba(0, 0, 0, 0.1)
@@ -46,7 +46,7 @@
 }
 
 .mat-mdc-raised-button.mat-accent {
-    --mdc-protected-button-container-color: var(--warning-500);
+    --mdc-protected-button-container-color: var(--secondary-500);
     --mdc-protected-button-label-text-color: black;
     --mat-protected-button-state-layer-color: black;
     --mat-protected-button-ripple-color: rgba(0, 0, 0, 0.1)
@@ -67,9 +67,9 @@
 }
 
 .mat-mdc-outlined-button.mat-accent {
-    --mdc-outlined-button-label-text-color: var(--warning-500);
+    --mdc-outlined-button-label-text-color: var(--secondary-500);
     --mdc-outlined-button-outline-color: rgba(0, 0, 0, 0.12);
-    --mat-outlined-button-state-layer-color: var(--warning-500);
+    --mat-outlined-button-state-layer-color: var(--secondary-500);
     --mat-outlined-button-ripple-color: rgba(255, 215, 64, 0.1)
 }
 
@@ -88,7 +88,7 @@
 }
 
 .mat-mdc-fab.mat-accent {
-    --mdc-fab-container-color: var(--warning-500);
+    --mdc-fab-container-color: var(--secondary-500);
     --mat-fab-foreground-color: black;
     --mat-fab-state-layer-color: black;
     --mat-fab-ripple-color: rgba(0, 0, 0, 0.1)
@@ -109,7 +109,7 @@
 }
 
 .mat-mdc-mini-fab.mat-accent {
-    --mdc-fab-small-container-color: var(--warning-500);
+    --mdc-fab-small-container-color: var(--secondary-500);
     --mat-fab-small-foreground-color: black;
     --mat-fab-small-state-layer-color: black;
     --mat-fab-small-ripple-color: rgba(0, 0, 0, 0.1)
