--- a/src/app/_shared/styles/material-override/mat-card.css
+++ b/src/app/_shared/styles/material-override/mat-card.css
@@ -1,7 +1,7 @@
 .mat-mdc-card-header {
-    /* TODO Check if needed */
-    /* padding: 2rem 2rem 0 !important; */
+    padding: 2rem 2rem .5rem !important;
 }
+
 
 .mat-mdc-card-content {
     padding: 0 2rem !important;
