--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -1,43 +1,90 @@
-<!-- <section class="landing-section position-relative d-flex align-items-center">
-  <img src="/assets/images/hero.jfif" alt="GFC CATALYST"
-    class="img-fluid position-absolute w-100 h-100 object-fit-cover z-n1">
-  <div class="text-white ms-md-5 ps-md-5 row">
+<!-- Hero Section -->
+<section class="hero d-flex align-items-center justify-content-start">
+  <div class="hero-overlay"></div>
+  <div class="hero-content mx-5">
     <div class="row">
-      <h1 class="col-12 col-md-6">Inspiring Families To Dream Again</h1>
+      <h1 class="col-12 col-md-7 text-white ">Inspiring Families To Dream Again</h1>
     </div>
-    <div class="row">
-      <h5 class="col-12 col-md-5">
+
+    <div class="row mt-3">
+      <h5 class="col-12 col-md-7 text-white ">
         Transform your financial future with personalized tools and expert mentorship.
       </h5>
     </div>
-    <div class="row mt-3">
-      <button mat-stroked-button class="col-auto">
-        Ve nuestros servicios
+
+    <div class="row mt-5">
+      <button mat-raised-button color="accent" class="col-auto">
+        Start your Journey Now
       </button>
     </div>
   </div>
-</section> -->
+</section>
 
 <!-- Our philosophy -->
-<!-- <section class="container-fluid landing-section">
-  <h6>Our philosophy</h6>
-  <h2>We believe every dream can change the world.</h2>
+<section class="container philosophy-section">
+  <div class="row bg-accent-100 p-5 rounded">
+    <div class="col-12 col-xl-5 border-right">
+      <h6 class="text-secondary-600">Our philosophy</h6>
+      <h2>We believe every dream can change the world.</h2>
+    </div>
 
-  <span>
-    At GFC, <b>we focus on growing your wealth and turning it into a force for good.</b> We support you in achieving
-    your
-    dreams, whether it's advancing global causes, supporting your family and community, or building a lasting business.
-    Our goal is to help you leave a meaningful legacy that makes a real difference.
-  </span>
-</section> -->
+    <div class="col-12 col-xl-7 align-content-center">
+      <p class="text-body pt-4 px-3">
+        At GFC, <b class="text-primary-500">we focus on growing your wealth and turning it into a force for good.</b> We support you in achieving
+        your
+        dreams, whether it's advancing global causes, supporting your family and community, or building a lasting
+        business.
+        Our goal is to help you leave a meaningful legacy that makes a real difference.
+      </p>
+    </div>
+  </div>
+</section>
 
 <!-- Start your journey -->
-<!-- <section class="container-fluid landing-section">
-  <div class="d-flex flex-column text-center">
+<section class="container align-content-center py-5 my-4">
+  <div class="d-flex flex-column text-center gap-2 py-2">
     <h2>Start your journey</h2>
     <h6>We empower financial independence with solutions and mentorship.</h6>
   </div>
-</section> -->
+
+  <div class="row py-5">
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100" appearance="outlined">
+        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <mat-card-content class="my-4">
+          <h5>
+            Build and secure your wealth.
+          </h5>
+          <button mat-button>Become a Client</button>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100" appearance="outlined">
+        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <mat-card-content class="my-4">
+          <h5>
+            Start a business
+          </h5>
+          <button mat-button>Become a Partner</button>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100" appearance="outlined">
+        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <mat-card-content class="my-4">
+          <h5>
+            Donate and contribute
+          </h5>
+          <button mat-button>Make an impact</button>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</section>
 
 <!-- CTA -->
 <div class="py-5 bg-primary-900">
@@ -53,13 +100,12 @@
 
 <!-- Begin your journey -->
 <section class="container align-content-center py-5 my-4">
-  <div class="row">
+  <div class="d-flex flex-column gap-2 py-2">
+    <h2>Begin your journey with GFC</h2>
+    <h6>Begin your success with our expert services and guidance.</h6>
+  </div>
+  <div class="row py-5">
     <div class="col-12 col-xl-8">
-      <div class="d-flex flex-column gap-2 mb-4 py-2">
-        <h2>Begin your journey with GFC</h2>
-        <h6>Begin your success with our expert services and guidance.</h6>
-      </div>
-
       <div class="row">
         <div class="col-12 col-sm-6 my-4">
           <h4 class="mb-2">Financial Education</h4>
@@ -93,13 +139,13 @@
 <!-- Your wealth, our mission -->
 <div class="bg-accent-100 py-5">
   <section class="container align-content-center">
-    <div class="d-flex flex-column text-center gap-2 mb-4 py-2">
+    <div class="d-flex flex-column text-center gap-2 py-2">
       <h2>Your Wealth, Our Mission</h2>
       <h6>Driven by numbers, powered by impact. Join thousands who trust us to protect, build, and
         secure their financial future.</h6>
     </div>
 
-    <div class="row">
+    <div class="row py-5">
       <div class="d-flex flex-column text-center col-12 col-md-6 col-xl-3 gap-3">
         <div>
           <p class="text-highlight">+10</p>
