--- a/src/app/modules/landing/pages/services/services.component.html
+++ b/src/app/modules/landing/pages/services/services.component.html
@@ -1,3 +1,105 @@
-<p>
-  services works!
-</p>
+<!-- Hero Section -->
+<!-- <section class="hero d-flex align-items-center justify-content-start">
+  <div class="hero-overlay"></div>
+  <div class="hero-content mx-5">
+    <div class="row">
+      <h1 class="col-12 col-md-7 text-white ">Tailored Financial Strategies for Your Success</h1>
+    </div>
+
+    <div class="row mt-3">
+      <h5 class="col-12 col-md-7 text-white ">
+        Discover how our personalized strategies and solutions are designed to help you achieve your financial
+        aspirations.
+      </h5>
+    </div>
+  </div>
+</section> -->
+
+<!-- Step by step -->
+<section class="container align-content-center py-5 my-4">
+  <div class="d-flex flex-column text-center py-2">
+    <h2>Your Financial Success Plan</h2>
+  </div>
+
+  <div class="row py-5">
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100">
+        <mat-card-content class="my-4">
+          <mat-icon fontIcon="task" class="big"></mat-icon>
+          <h5>
+            Step 1
+          </h5>
+          <p>Request your complimentary consultation</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100">
+        <mat-card-content class="my-4">
+          <h5>
+            Step 2
+          </h5>
+          <p>Get matched with a qualified agent</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100">
+        <mat-card-content class="my-4">
+          <h5>
+            Step 3
+          </h5>
+          <p>Gain confidence in Your financial future</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</section>
+
+<!-- Services -->
+<section class="container align-content-center py-5 my-4">
+  <div class="d-flex flex-column text-center py-2">
+    <h2>Start Shaping Your Financial Future</h2>
+    <!-- <h6>We empower financial independence with solutions and mentorship.</h6> -->
+  </div>
+
+  <div class="row py-5">
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100">
+        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <mat-card-content class="my-4">
+          <h5>
+            Step 1
+          </h5>
+          <p>Request your complimentary consultation</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100">
+        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <mat-card-content class="my-4">
+          <h5>
+            Step 2
+          </h5>
+          <p>Get matched with a qualified agent</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-12 col-md-4 py-3">
+      <mat-card class="h-100">
+        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <mat-card-content class="my-4">
+          <h5>
+            Step 3
+          </h5>
+          <p>Gain confidence in Your financial future</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</section>
