--- a/src/app/modules/landing/components/footer/footer.component.html
+++ b/src/app/modules/landing/components/footer/footer.component.html
@@ -1,27 +1,27 @@
 <footer class="container-fluid bg-primary-900">
   <div class="row justify-content-center p-5">
     <div class="col-8 col-md-4 order-4 order-md-1 d-flex flex-column">
-        <img src="../../../../../assets/images/logo-white-complete.png" class="img-fluid">
+      <img src="../../../../../assets/images/logo-white-complete.png" class="img-fluid">
 
       <div class="d-flex flex-column gap-3 px-4 mx-4">
         <div class="d-flex align-content-center gap-2">
           <mat-icon class="text-white">location_on</mat-icon>
-          <span>3333 Michelson Dr suite 300 Irvine CA 92618</span>
+          <span class="text-white text-body">3333 Michelson Dr suite 300 Irvine CA 92618</span>
         </div>
         <div class="d-flex align-content-center gap-2">
           <mat-icon class="text-white">phone</mat-icon>
-          <span>+52 626 922 1620</span>
+          <span class="text-white text-body">+52 626 922 1620</span>
         </div>
         <div class="d-flex align-content-center gap-2">
           <mat-icon class="text-white">mail</mat-icon>
-          <span>Joe&#64;catalystleadershipgrp.com</span>
+          <span class="text-white text-body">Joe&#64;catalystleadershipgrp.com</span>
         </div>
       </div>
     </div>
 
     <div class="col-6 col-md-2 order-1">
-      <div class="px-3">Quick Links</div>
-      <mat-list role="NavigationList">
+      <div class="text-white text-caption px-3">Quick Links</div>
+      <mat-nav-list role="NavigationList">
         @for (item of NavigationItems; track item.displayName) {
         <ng-container *ngIf="item.isActive">
           <mat-list-item [routerLink]="item.link" [routerLinkActive]="['active']">
@@ -31,12 +31,12 @@
         } @empty {
         <mat-list-item>There are no items.</mat-list-item>
         }
-      </mat-list>
+      </mat-nav-list>
     </div>
 
     <div class="col-6 col-md-2 order-2">
-      <div class="px-3">Quick Links</div>
-      <mat-list role="SocialMediaList">
+      <div class="text-white text-caption px-3">Quick Links</div>
+      <mat-nav-list role="SocialMediaList">
         @for (item of SocialMediaItems; track item.displayName) {
         <ng-container *ngIf="item.isActive">
           <mat-list-item [routerLink]="item.link" [routerLinkActive]="['active']">
@@ -46,16 +46,16 @@
         } @empty {
         <mat-list-item>There are no items.</mat-list-item>
         }
-      </mat-list>
+      </mat-nav-list>
     </div>
 
     <div class="col-12 col-md-4 order-3 mt-4 mt-md-0">
-      <div>Get Updates</div>
-      <span>
+      <div class="text-white text-caption">Get Updates</div>
+      <div class="text-white text-body">
         Welcome to Finxpert, Signup For Our
         Latest news & Article. We Won't give you
         spam mail and irrevelevnt messages.
-      </span>
+      </div>
       <mat-form-field>
         <mat-label>Enter your email address</mat-label>
         <input matInput type="mail" placeholder="example@mail.com">
