--- a/src/app/_shared/styles/custom.css
+++ b/src/app/_shared/styles/custom.css
@@ -103,7 +103,7 @@ h1 {
 }
 
 .text-body {
-    color: var(--primary-900) !important;
+    color: var(--primary-900);
     font-family: Instrument Sans, sans-serif;
     font-weight: 400;
     font-size: var(--fs-md);
