--- a/src/app/_shared/styles/material-override/mat-icon.css
+++ b/src/app/_shared/styles/material-override/mat-icon.css
@@ -36,6 +36,10 @@ mat-icon.primary-600 {
     --mat-icon-color: var(--primary-600) !important;
 }
 
+mat-icon.secondary-600 {
+    --mat-icon-color: var(--secondary-400) !important;
+}
+
 mat-icon.disabled {
   --mat-icon-color: var(--disabled) !important;
 }
