--- a/src/app/modules/landing/pages/services/services.component.css
+++ b/src/app/modules/landing/pages/services/services.component.css
@@ -20,3 +20,26 @@
     position: relative;
     z-index: 2;
 }
+
+.cta {
+    background-image: url('/assets/images/hero.jfif');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 40dvh;
+    position: relative;
+}
+
+.cta-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(3, 27, 57,0.5);
+}
+
+.cta-content {
+    position: relative;
+    z-index: 2;
+}
