--- a/src/app/modules/landing/pages/services/services.component.html
+++ b/src/app/modules/landing/pages/services/services.component.html
@@ -1,5 +1,5 @@
 <!-- Hero Section -->
-<!-- <section class="hero d-flex align-items-center justify-content-start">
+<section class="hero d-flex align-items-center justify-content-start">
   <div class="hero-overlay"></div>
   <div class="hero-content mx-5">
     <div class="row">
@@ -13,7 +13,80 @@
       </h5>
     </div>
   </div>
-</section> -->
+</section>
+
+<!-- Start Shaping Your Financial Future  -->
+<section class="container align-content-center py-5 my-4">
+  <div class="row">
+    <div class="col-4 d-none d-md-block">
+      <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100" />
+    </div>
+    <div class="col-12 col-md-8">
+      <div class="py-4">
+        <h2>Start Shaping Your Financial Future</h2>
+      </div>
+      <p class="text-body">
+        GFI offers a comprehensive range of financial solutions tailored to meet the diverse needs of individuals,
+        families, and businesses. We believe in an approach to financial well-being that encompasses wealth creation,
+        protection, and transfer.
+      </p>
+      <p class="text-body">
+        Our solutions are designed to empower you to achieve your financial goals, secure your legacy, and make a
+        meaningful impact on your family, community, and beyond.
+      </p>
+      <button mat-raised-button>Get Started</button>
+    </div>
+  </div>
+</section>
+
+<!-- Protect What Matters Most  -->
+<div class="py-5 bg-accent-200">
+  <section class="container align-content-center">
+    <div class="row">
+      <div class="col-12 col-md-8">
+        <div class="py-4">
+          <h2>Protect What Matters Most</h2>
+        </div>
+        <p class="text-body">
+          When contemplating the future, it’s essential to prioritize what matters most to you. Whether it’s ensuring a
+          comfortable retirement, navigating the complexities of tax implications, safeguarding your assets, or
+          assessing potential risks, each aspect plays a pivotal role in shaping your financial journey.
+        </p>
+        <p class="text-body">
+          By giving careful consideration to these elements, you lay the foundation for a secure and prosperous future,
+          tailored to your individual goals and aspirations.
+        </p>
+      </div>
+      <div class="col-4 d-none d-md-block">
+        <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100" />
+      </div>
+    </div>
+  </section>
+</div>
+
+<!-- Services -->
+<section class="container align-content-center py-5 my-4">
+  <div class="d-flex flex-column text-center py-2">
+    <h2>Start Shaping Your Financial Future</h2>
+  </div>
+  <div class="row">
+    @for (item of InsuranceItems; track item.title) {
+    <div class="col-6 col-md-3 py-3">
+      <mat-card class="h-100">
+        <img mat-card-image [src]="item.image" alt="Placeholder Image" class="img-fluid" />
+        <mat-card-content class="my-4">
+          <h5>
+            {{item.title}}
+          </h5>
+          <p class="text-body mt-3">{{item.description}}</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    } @empty {
+    <li>There are no items.</li>
+    }
+  </div>
+</section>
 
 <!-- Step by step -->
 <section class="container align-content-center py-5 my-4">
@@ -21,85 +94,99 @@
     <h2>Your Financial Success Plan</h2>
   </div>
 
-  <div class="row py-5">
+  <div class="row">
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100">
-        <mat-card-content class="my-4">
-          <mat-icon fontIcon="task" class="big"></mat-icon>
-          <h5>
+      <mat-card class="h-100" appearance="outlined">
+        <mat-card-content class="my-4 text-center">
+          <div class="d-flex justify-content-center">
+            <mat-icon fontIcon="fact_check" class="big secondary-600"></mat-icon>
+          </div>
+          <h4 class="mt-3">
             Step 1
-          </h5>
-          <p>Request your complimentary consultation</p>
+          </h4>
+          <p class="text-body mt-3">Request your complimentary consultation</p>
         </mat-card-content>
       </mat-card>
     </div>
 
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100">
-        <mat-card-content class="my-4">
-          <h5>
+      <mat-card class="h-100" appearance="outlined">
+        <mat-card-content class="my-4 text-center">
+          <div class="d-flex justify-content-center">
+            <mat-icon fontIcon="support_agent" class="big secondary-600"></mat-icon>
+          </div>
+          <h4 class="mt-3">
             Step 2
-          </h5>
-          <p>Get matched with a qualified agent</p>
+          </h4>
+          <p class="text-body mt-3">Get matched with a qualified agent</p>
         </mat-card-content>
       </mat-card>
     </div>
 
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100">
-        <mat-card-content class="my-4">
-          <h5>
+      <mat-card class="h-100" appearance="outlined">
+        <mat-card-content class="my-4 text-center">
+          <div class="d-flex justify-content-center">
+            <mat-icon fontIcon="volunteer_activism" class="big secondary-600"></mat-icon>
+          </div>
+          <h4 class="mt-3">
             Step 3
-          </h5>
-          <p>Gain confidence in Your financial future</p>
+          </h4>
+          <p class="text-body mt-3">Gain confidence in Your financial future</p>
         </mat-card-content>
       </mat-card>
     </div>
   </div>
 </section>
 
-<!-- Services -->
+<!-- CTA -->
+<section class="cta d-flex align-items-center justify-content-start">
+  <div class="cta-overlay"></div>
+  <div class="cta-content mx-5 w-100">
+    <div class="row">
+      <h2 class="col-12 col-md-7 text-white">Step Into A Brighter Future</h2>
+    </div>
+
+    <div class="row mt-3">
+      <p class="col-12 col-md-7 text-white">
+        You deserve the power to shape your financial future, turning your dreams into reality and leaving a lasting
+        impact on your life and the lives of others.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- Trusted partners -->
 <section class="container align-content-center py-5 my-4">
   <div class="d-flex flex-column text-center py-2">
-    <h2>Start Shaping Your Financial Future</h2>
-    <!-- <h6>We empower financial independence with solutions and mentorship.</h6> -->
-  </div>
-
-  <div class="row py-5">
-    <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100">
-        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
-        <mat-card-content class="my-4">
-          <h5>
-            Step 1
-          </h5>
-          <p>Request your complimentary consultation</p>
-        </mat-card-content>
-      </mat-card>
-    </div>
-
-    <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100">
-        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
-        <mat-card-content class="my-4">
-          <h5>
-            Step 2
-          </h5>
-          <p>Get matched with a qualified agent</p>
-        </mat-card-content>
-      </mat-card>
-    </div>
-
-    <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100">
-        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
-        <mat-card-content class="my-4">
-          <h5>
-            Step 3
-          </h5>
-          <p>Gain confidence in Your financial future</p>
-        </mat-card-content>
-      </mat-card>
-    </div>
+    <h2>Our Trusted Partners</h2>
+    <h6>As part of our commitment to our clients, each of our providers we partner with are rated A or higher by
+      industry standards.</h6>
   </div>
 </section>
+
+<!-- FAQs -->
+<div class="py-5 bg-primary-400">
+  <section class="container align-content-center">
+    <div class="d-flex flex-column text-center py-2">
+      <h2 class="text-white">Frequently Asked Questions</h2>
+    </div>
+
+    <div class="py-5">
+      <mat-accordion>
+        @for (item of FaqsItems; track item.title) {
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title class="text-white"> {{item.title}} </mat-panel-title>
+          </mat-expansion-panel-header>
+          <p class="text-body text-white">{{item.description}}</p>
+        </mat-expansion-panel>
+        } @empty {
+        <li>There are no items.</li>
+        }
+      </mat-accordion>
+    </div>
+  </section>
+</div>
+
+<app-footer></app-footer>
